@@ -4,11 +4,13 @@ Released 2.4.15 2014-03-13
 Changes since 2.4.14:
 
 Lib/
-* Added missing modules ldap.controls.openldap and 
+* Added missing modules ldap.controls.openldap and
   ldap.controls.pwdpolicy to setup.py
 * Added missing imports to ldap.controls.pwdpolicy
 * Fixed ldap.controls.pwdpolicy.decodeControlValue() to decode
   string of digits
+* Support for X-SUBST in schema element class LDAPSyntax
+* Support for X-ORDERED and X-ORIGIN in schema element class AttributeType
 
 Modules/
 
@@ -20,7 +22,7 @@ Changes since 2.4.13:
 Lib/
 * Added ldap.controls.openldap.SearchNoOpControl
 * New method ldap.async.AsyncSearchHandler.afterFirstResult()
-  for doing something right after successfully receiving but before 
+  for doing something right after successfully receiving but before
   processing first result
 * Better log data written when invoking ldap.LDAPLock.acquire() and
   ldap.LDAPLock.release()
